makes use of toList()